--- a/ejemplo1.html
+++ b/ejemplo1.html
@@ -10,5 +10,7 @@
     <h1>1er Commit</h1>
     <h2>Este commit es de nueva_rama</h2>
     <h1>Hola Python</h1>
+    <h2>Segundo commit en nueva_rama</h2>
+    <h1>Hola Python</h1>
 </body>
 </html>
