3er Commit en nueva_rama

--- a/ejemplo1.html
+++ b/ejemplo1.html
@@ -11,6 +11,6 @@
     <h2>Este commit es de nueva_rama</h2>
     <h1>Hola Python</h1>
     <h2>Segundo commit en nueva_rama</h2>
-    <h1>Hola Python</h1>
+    <h2>Tercer commit en nueva_rama</h2>
 </body>
 </html>
