Cambios despues de la combinacion que pertenecera a rama master

--- a/ejemplo1.html
+++ b/ejemplo1.html
@@ -18,5 +18,7 @@
     <h1>Hola Python</h1>
     <h2>Segundo commit en nueva_rama</h2>
     <h2>Tercer commit en nueva_rama</h2>
+	
+	<h1>Cambios despues del merge que perteneceran a rama master</h1>
 </body>
 </html>
